[tool.poetry]
name = "vertexai-image-generated-spotify-playlist"
version = "0.1.0"
description = ""
authors = ["Ching Wen Cheng <cwcheng0912@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
streamlit = "^1.39.0"
spotipy = "^2.24.0"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.12"
langgraph = "^0.2.39"
langchain-google-vertexai = "^2.0.5"
langchain = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
